--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.13.5",
+    "boto3>=1.40.27",
     "django>=5.2.6",
     "osm-login-python>=2.0.0",
     "requests>=2.32.5",
