--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "boto3>=1.40.27",
     "django>=5.2.6",
     "osm-login-python>=2.0.0",
+    "psycopg[binary]>=3.2.10",
     "requests>=2.32.5",
     "uvicorn[standard]>=0.35.0",
 ]
