--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "psycopg[binary]>=3.2.10",
     "requests>=2.32.5",
     "uvicorn[standard]>=0.35.0",
+    "whitenoise>=6.10.0",
 ]
